[project]
name = "tweeter-data-fetcher"
version = "0.1.0"
description = ""
authors = [
    {name = "Parham Beik",email = "parhambeik2183@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.34.2,<3.0.0)",
    "urllib3 (>=2.7.0,<3.0.0)",
    "jdatetime (>=5.3.0,<6.0.0)",
    "pytz (>=2026.2,<2027.0)",
    "rich (>=15.0.0,<16.0.0)",
    "playwright (>=1.60.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
